--- a/server/private/reserva-avulsa.html
+++ b/server/private/reserva-avulsa.html
@@ -105,7 +105,7 @@
                     <td>Avulsa</td>
                     <td>12/04/2018</td>
                     <td>
-                        <button class="mdc-button button-confirm mdc-button--raised dark-ripple" id="confirm-button-id">Avaliar</button>
+                        <button class="mdc-button button-confirm mdc-button--raised dark-ripple" >Avaliar</button>
                     </td>
                 </tr>
                 <tr>
@@ -116,7 +116,7 @@
                     <td>Especial</td>
                     <td>11/04/2018</td>
                     <td>
-                        <button class="mdc-button button-confirm mdc-button--raised dark-ripple" id="feedback2-button-id">Avaliar</button>
+                        <button class="mdc-button button-confirm mdc-button--raised dark-ripple" >Avaliar</button>
                     </td>
                 </tr>
                 <tr>
@@ -127,7 +127,7 @@
                     <td>Avulsa</td>
                     <td>29/03/2018</td>
                     <td>
-                        <button class="mdc-button button-confirm mdc-button--raised dark-ripple" id="feedback-button-id">Feedback</button>
+                        <button class="mdc-button button-confirm mdc-button--raised dark-ripple" >Feedback</button>
                     </td>
                 </tr>
             </tbody>
@@ -209,9 +209,8 @@
         <div class="mdc-dialog__backdrop"></div>
     </aside>
 </body>
-<script src="bundle.js" async></script>
+<script src="script/reserva-avulsa.js"></script>
 <script src="script/materialize.js"></script>
 <script src="script/sha256.min.js"></script>
 <script src="script/api.js"></script>
-
 </html>
